FEAT: integrate cron scheduling and RabbitMQ messaging modules

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ MIGRATIONS_RUN=false
 # swagger
 SWAGGER_USER=admin
 SWAGGER_PASSWORD=123456
+
+# RabbitMQ
+RABBITMQ_URI=amqp://guest:guest@localhost:5672
+RABBITMQ_QUEUE=nest_template_queue
