feat(rabbitmq, health): add RabbitMQ integration and realtime health module fix(cron): fix cron module docs: add code documentation

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,9 @@ MIGRATIONS_RUN=false
 # swagger
 SWAGGER_USER=admin
 SWAGGER_PASSWORD=123456
+ENABLE_SWAGGER_PROTECTION=false
 
 # RabbitMQ
 RABBITMQ_URI=amqp://guest:guest@localhost:5672
 RABBITMQ_QUEUE=nest_template_queue
+RABBITMQ_MANAGEMENT_UI_PORT=15672
