--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nestjs-template",
   "version": "0.0.1",
-  "description": "",
+  "description": "A starter NestJS project template with RabbitMQ messaging, TypeORM, WebSocket support, scheduling, Swagger documentation, i18n, and structured testing setup. Includes Docker scripts, migrations, and linting/formatting tools for rapid development and production-ready deployments.",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
