--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,6 @@ SWAGGER_PASSWORD=123456
 ENABLE_SWAGGER_PROTECTION=false
 
 # RabbitMQ
-RABBITMQ_URI=amqp://guest:guest@localhost:5672
+RABBITMQ_URI=amqp://admin:admin@localhost:5672
 RABBITMQ_QUEUE=nest_template_queue
 RABBITMQ_MANAGEMENT_UI_PORT=15672
